Some fixes for the ratings on Context Browser, I hope I didn't break anything. - All stars on the same line; ( **** * doesn't make much sense :-) ) - Stars got a default size, that can and should be overridden with css; - The lines should be aligned, even with you got tracks with scores such as 0 or 100;
svn path=/trunk/extragear/multimedia/amarok/; revision=531293

--- a/src/themes/example/stylesheet.css
+++ b/src/themes/example/stylesheet.css
@@ -196,7 +196,7 @@ a {
 
 
 .sbtext {
-    text-align: center;
+    text-align: right;
     padding: 0px 4px;
   }
 
@@ -209,7 +209,7 @@ a {
   }
 
 .ratingStar {
-    height: 1.1em;
+    height: 0.9em;
   }
 
 .scoreBox {
