--- a/src/themes/reinhardt/stylesheet.css
+++ b/src/themes/reinhardt/stylesheet.css
@@ -42,7 +42,7 @@ h6 { font-size: AMAROK_FONTSIZEpx; background-color: ButtonFace; color: ButtonTe
 .album-song-title { }
 .album-song-time { }
 .statsBox { border-left: solid Highlight 1px; }
-.sbtext { padding: 0px 4px; font-size: AMAROK_FONTSIZEpx; }
+.sbtext { padding: 0px 4px; font-size: AMAROK_FONTSIZEpx; text-align: right; }
 .sbouter { width: 52px; height: 10px; background-color: ThreeDFace; border: solid ThreeDShadow 1px; }
 .sbinner { height: 8px; background-color: Highlight; border: solid ThreeDFace 1px; }
 .ratingBox { padding: 0px 4px; }
